<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tvStudentName"
                android:text="@string/student_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:id="@+id/tvContactNumber"
                android:text="@string/contact_number"
                android:textSize="15sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvStudentName"
               app:layout_constraintEnd_toEndOf="parent" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:id="@+id/tvCourseName"
                android:textSize="15sp"
                android:text="@string/course_name"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvContactNumber"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:id="@+id/tvGender"
                android:textSize="15sp"
                android:text="@string/gender"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCourseName"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:id="@+id/btnUpdate"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnDelete"
                app:layout_constraintTop_toBottomOf="@id/tvGender"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:id="@+id/btnDelete"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnUpdate"
                app:layout_constraintTop_toBottomOf="@id/tvGender"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>